src/test/ui/recursion/recursive-types-are-not-uninhabited.stderr
error[E0005]: refutable pattern in local binding: `Err(_)` not covered
  --> $DIR/recursive-types-are-not-uninhabited.rs:6:9
   |
LL |     let Ok(x) = res;
   |         ^^^^^ pattern `Err(_)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
